Fixed overlapping state in PracticalExperience component.

--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,10 @@ section {
   margin: 0 auto;
 }
 
+hr {
+  max-width: 420px;
+}
+
 form {
   display: flex;
   flex-direction: column;
